feat:MVVM架构完成功能、基本完善暗色适配和中英适配

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,28 +1,32 @@
 <resources>
-    <string name="app_name">每日畅享</string>
+    <string name="app_name">Daily Enjoyment</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="bingying_title">精选壁纸|每日一图</string>
-    <string name="news_title">每日新闻</string>
-    <string name="video_title">每日视频</string>
-    <string name="setting">setting</string>
-    <string name="exit">exit</string>
-    <string name="developer">wuleizhenshang</string>
+    <string name="bingying_title">Featured Wallpaper | Daily Image</string>
+    <string name="news_title">Daily News</string>
+    <string name="video_title">Daily Videos</string>
+    <string name="setting">Setting</string>
+    <string name="exit">Exit</string>
+    <string name="developer">Developer: wuleizhenshang</string>
     <string name="nav_tip">Android | Java</string>
-    <string name="hot_info">热门资讯</string>
-    <string name="loading">loading\.\.\.</string>
-    <string name="cancel">cancel</string>
-    <string name="confirm">confirm</string>
-    <string name="daily_english_toolbar_title">每日经典英语范句</string>
-    <string name="daily_content_toolbar_title">每日一言</string>
-    <string name="daily_english_original_content">original：%s</string>
-    <string name="daily_english_translate_content">translation：%s</string>
-    <string name="daily_english_source">source：%s</string>
-    <string name="username">UserName</string>
+    <string name="hot_info">Hot Information</string>
+    <string name="loading">Loading...</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
+    <string name="daily_english_toolbar_title">Daily Classic English Phrases</string>
+    <string name="daily_content_toolbar_title">Daily Quote</string>
+    <string name="daily_english_original_content">Original: %s</string>
+    <string name="daily_english_translate_content">Translation: %s</string>
+    <string name="daily_english_source">Source: %s</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="please_input_username">请输入账号</string>
-    <string name="please_input_password">请输入密码</string>
-    <string name="dialog_tip_title">温馨提示</string>
-    <string name="dialog_tip_register_text">多次登陆失败！是否要直接创建用户？</string>
-    <string name="press_twice_to_exit">再次按下退出应用程序</string>
+    <string name="please_input_username">Please enter your username</string>
+    <string name="please_input_password">Please enter your password</string>
+    <string name="dialog_tip_title">Friendly Reminder</string>
+    <string name="dialog_tip_register_text">Multiple login attempts failed! Do you want to create a new user directly?</string>
+    <string name="press_twice_to_exit">Press again to exit the application</string>
+    <string name="app_bottom_title">Model · View · ViewModel</string>
+    <string name="navigation_menu_picture">Picture</string>
+    <string name="navigation_menu_info">Real-time Info</string>
+    <string name="navigation_menu_content">Daily statement</string>
 </resources>
