--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,10 @@
     <string name="daily_english_source">来源：%s</string>
     <string name="username">账号</string>
     <string name="password">密码</string>
+    <string name="repassword">再次输入密码</string>
     <string name="login">登&#12288;录</string>
+    <string name="register">注&#12288;册</string>
+    <string name="no_user_to_login">还未注册？去注册</string>
     <string name="please_input_username">请输入账号</string>
     <string name="please_input_password">请输入密码</string>
     <string name="dialog_tip_title">温馨提示</string>
@@ -29,4 +32,11 @@
     <string name="navigation_menu_picture">图片</string>
     <string name="navigation_menu_info">资讯</string>
     <string name="navigation_menu_content">每日语句</string>
+
+
+    <!--Toast-->
+    <string name="register_fail">注册失败！</string>
+    <string name="register_success">注册成功，请使用注册的账号密码登录！</string>
+    <string name="login_success">登录成功！</string>
+    <string name="login_fail">登录失败！</string>
 </resources>
